# api/openapi.yaml
@@ -7,16 +7,57 @@ info:
     version: 0.0.1
 paths:
     sms/bridge:
-        post:
+        get:
             tags:
                 - SmsService
             operationId: SmsService_SendSms
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/SendSmsRequest'
-                required: true
+            parameters:
+                - name: from
+                  in: query
+                  schema:
+                    type: string
+                - name: to
+                  in: query
+                  schema:
+                    type: string
+                - name: message
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SendSmsResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    sms/bridge/?from={message:
+        get:
+            tags:
+                - SmsService
+            operationId: SmsService_SendSms
+            parameters:
+                - name: from
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: to
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: message
+                  in: path
+                  required: true
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
@@ -40,15 +81,6 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        SendSmsRequest:
-            type: object
-            properties:
-                from:
-                    type: string
-                to:
-                    type: string
-                message:
-                    type: string
         SendSmsResponse:
             type: object
             properties:
