# api/sms/sms.pb.validate.go
@@ -1,0 +1,275 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/sms/sms.proto
+
+package sms
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on SendSmsRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *SendSmsRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SendSmsRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in SendSmsRequestMultiError,
+// or nil if none found.
+func (m *SendSmsRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SendSmsRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if !_SendSmsRequest_From_Pattern.MatchString(m.GetFrom()) {
+		err := SendSmsRequestValidationError{
+			field:  "From",
+			reason: "value does not match regex pattern \"^1[3-9]\\\\d{9}$\"",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if !_SendSmsRequest_To_Pattern.MatchString(m.GetTo()) {
+		err := SendSmsRequestValidationError{
+			field:  "To",
+			reason: "value does not match regex pattern \"^1[3-9]\\\\d{9}$\"",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetMessage()) > 5120 {
+		err := SendSmsRequestValidationError{
+			field:  "Message",
+			reason: "value length must be at most 5120 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if len(errors) > 0 {
+		return SendSmsRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// SendSmsRequestMultiError is an error wrapping multiple validation errors
+// returned by SendSmsRequest.ValidateAll() if the designated constraints
+// aren't met.
+type SendSmsRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SendSmsRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SendSmsRequestMultiError) AllErrors() []error { return m }
+
+// SendSmsRequestValidationError is the validation error returned by
+// SendSmsRequest.Validate if the designated constraints aren't met.
+type SendSmsRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SendSmsRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SendSmsRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SendSmsRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SendSmsRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SendSmsRequestValidationError) ErrorName() string { return "SendSmsRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e SendSmsRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSendSmsRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SendSmsRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SendSmsRequestValidationError{}
+
+var _SendSmsRequest_From_Pattern = regexp.MustCompile("^1[3-9]\\d{9}$")
+
+var _SendSmsRequest_To_Pattern = regexp.MustCompile("^1[3-9]\\d{9}$")
+
+// Validate checks the field values on SendSmsResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *SendSmsResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SendSmsResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// SendSmsResponseMultiError, or nil if none found.
+func (m *SendSmsResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SendSmsResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for MessageId
+
+	if len(errors) > 0 {
+		return SendSmsResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// SendSmsResponseMultiError is an error wrapping multiple validation errors
+// returned by SendSmsResponse.ValidateAll() if the designated constraints
+// aren't met.
+type SendSmsResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SendSmsResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SendSmsResponseMultiError) AllErrors() []error { return m }
+
+// SendSmsResponseValidationError is the validation error returned by
+// SendSmsResponse.Validate if the designated constraints aren't met.
+type SendSmsResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SendSmsResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SendSmsResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SendSmsResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SendSmsResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SendSmsResponseValidationError) ErrorName() string { return "SendSmsResponseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e SendSmsResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSendSmsResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SendSmsResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SendSmsResponseValidationError{}
